# gnome-tetravex

./: .cvsignore  .gitignore  .gitlab-ci.yml  ChangeLog  Makefile.am  NEWS  README  README.md  ca.po  configure.ac  gnome-tetravex.doap  gnotravex.6  gnotravex.c  gnotravex.desktop  gnotravex.desktop.in  gnotravex.desktop.in.in  gnotravex.schemas.in  meson.build  meson_options.txt
build-aux/: org.gnome.Tetravex.json
build-aux/flatpak/: org.gnome.Tetravex.Devel.json
data/: Makefile.am  gnome-tetravex-cli.6  gnome-tetravex.6  gnome-tetravex.appdata.xml  gnome-tetravex.appdata.xml.in  gnome-tetravex.desktop.in  gnome-tetravex.desktop.in.in  gnome-tetravex.ui  gnotravex.desktop.in.in  gnotravex.ui  meson.build  org.gnome.Tetravex.appdata.xml.in  org.gnome.Tetravex.desktop.in  org.gnome.Tetravex.desktop.in.in  org.gnome.Tetravex.gresource.xml.in  org.gnome.Tetravex.gschema.xml  org.gnome.Tetravex.gschema.xml.in  org.gnome.Tetravex.metainfo.xml.in.in  org.gnome.Tetravex.service.in  org.gnome.TetravexCli.gschema.xml  org.gnome.gnotravex.gschema.xml.in  org.gnome.tetravex.gschema.xml  org.gnome.tetravex.gschema.xml.in
data/css/: style.css
data/icons/: Makefile.am
data/icons/HighContrast/: Makefile.am
data/icons/hicolor/: Makefile.am
data/ui/: menu.ui  rules-dialog.ui  score-overlay.ui  shortcuts-dialog.ui  window.ui
help/: .gitignore  ChangeLog  ChangeLog.old  LINGUAS  Makefile.am  gnotravex.omf.in  meson.build
help/C/: .cvsignore  Makefile.am  gameplay.page  gnotravex-C.omf  gnotravex.xml  hint.page  index.page  license.page  move.page  multiplayer.page  shortcut.page  size.page  usage.page  winning.page
help/C/figures/: gnome-tetravex-video.ogv
help/ca/: ca.po
help/cs/: cs.po
help/da/: da.po
help/de/: de.po
help/el/: el.po
help/en_GB/: en_GB.po
help/es/: .cvsignore  Makefile.am  es.po  gnotravex-es.omf  gnotravex.sgml
help/eu/: eu.po
help/fr/: fr.po
help/gl/: gl.po
help/hu/: hu.po
help/id/: id.po
help/it/: it.po
help/kk/: kk.po
help/ko/: ko.po
help/oc/: oc.po
help/pl/: pl.po
help/pt_BR/: pt_BR.po
help/ro/: ro.po
help/ru/: ru.po
help/sl/: sl.po
help/sr/: sr.po
help/sr@latin/: sr@latin.po
help/sv/: sv.po
help/uk/: uk.po
help/zh_CN/: zh_CN.po
pixmaps/: Makefile.am
po/: LINGUAS  Makevars  POTFILES.in  POTFILES.skip  ab.po  af.po  am.po  an.po  ar.po  as.po  ast.po  az.po  be.po  bg.po  bn.po  bn_IN.po  br.po  bs.po  ca.po  ca@valencia.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en@shaw.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fur.po  ga.po  gl.po  gu.po  (+56 more)
snap/: snapcraft.yaml
src/: Makefile.am  app-menu.ui  cli.vala  config.vapi  fixes.vapi  gnome-tetravex-cli.vala  gnome-tetravex.gresource.xml  gnome-tetravex.ui  gnome-tetravex.vala  gnotravex.c  gnotravex.gresource.xml  gnotravex.vala  help-overlay.ui  history.vala  meson.build  puzzle-view.vala  puzzle.vala  rules-dialog.vala  score-dialog.vala  score-overlay-entry.ui  score-overlay.ui  score-overlay.vala  tetravex.css  theme-adwaita.vala  theme-extrusion.vala  theme-neoretro.vala  theme-new.vala  theme-nostalgia.vala  theme-synesthesia.vala  theme.vala  window.vala
