include $(top_srcdir)/gnome-doc-utils.make

DOC_ID = gnotravex

DOC_FIGURES = \
	figures/gnotravex-logo.png \
	figures/gnotravex-main-window.png \
	figures/gnotravex-video.ogv

DOC_PAGES = \
  gameplay.page \
  hint.page \
  index.page \
  license.page \
  move.page \
  multiplayer.page \
  shortcut.page \
  size.page \
  usage.page \
  winning.page

DOC_LINGUAS = ca cs da de el en_GB es eu fr it oc ru sl sr sr@latin sv zh_CN

dist-hook: doc-dist-hook

-include $(top_srcdir)/git.mk
