@YELP_HELP_RULES@
HELP_ID = gnome-tetravex

HELP_MEDIA = \
	figures/gnome-tetravex-logo.png \
	figures/gnome-tetravex-video.ogv

HELP_FILES = \
	hint.page \
	index.page \
	license.page \
	move.page \
	shortcut.page \
	size.page \
	usage.page \
	winning.page

HELP_LINGUAS = ca cs da de el en_GB es eu fr hu it oc ro ru sl sr sr@latin sv zh_CN

-include $(top_srcdir)/git.mk
