icon16dir=$(datadir)/icons/hicolor/16x16/apps
icon22dir=$(datadir)/icons/hicolor/22x22/apps
icon24dir=$(datadir)/icons/hicolor/24x24/apps
icon32dir=$(datadir)/icons/hicolor/32x32/apps
icon48dir=$(datadir)/icons/hicolor/48x48/apps
iconscalabledir=$(datadir)/icons/hicolor/scalable/apps

icon16_DATA = 16x16/gnotravex.png
icon22_DATA = 22x22/gnotravex.png
icon24_DATA = 24x24/gnotravex.png
icon32_DATA = 32x32/gnotravex.png
icon48_DATA = 48x48/gnotravex.png
iconscalable_DATA = scalable/gnotravex.svg
